--- a/Ejercicio 2/add_doctor.html
+++ b/Ejercicio 2/add_doctor.html
@@ -17,7 +17,7 @@
 <div>
     <!-- Body of page -->
     <h1>Agregar datos de un médico</h1>
-    <form id="myform" method="post" action="./cgi-bin/save_doctor.cgi">
+    <form id="myform" method="post" action="./cgi-bin/save_doctor.py">
       
       <!-- Label for nombre médico -->
       <br>
