Starting to work on Tarea 2: Adding a database

--- a/Tarea 1/web/avistamientos.html
+++ b/Tarea 1/web/avistamientos.html
@@ -11,7 +11,7 @@
     <!--  BS4 CSS -->
     <link href="librerias/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Script para vincular filas clickeables con una accion -->
-    <script src="d/detalle.js"></script>
+    <script src="js/detalle.js"></script>
     <!-- Etilos adicionales -->
     <link href="css/extra.css" rel="stylesheet">
 
