--- a/Tarea 1/web/detalle.html
+++ b/Tarea 1/web/detalle.html
@@ -11,7 +11,7 @@
     <!--  BS4 CSS -->
     <link href="librerias/bootstrap/css/bootstrap.min.css" rel="stylesheet">
    <!-- Script para fotos clickeables que abren mas grandes -->
-    <script src="d/detalle.js"></script>
+    <script src="js/detalle.js"></script>
     <!-- Estilos adicionales -->
     <link href="css/extra.css" rel="stylesheet">
     <!-- CSS especifico para el grid de fotos -->
