--- a/Tarea 1/web/informar.html
+++ b/Tarea 1/web/informar.html
@@ -13,25 +13,25 @@
     <!-- Estilos adicionales -->
     <link href="css/extra.css" rel="stylesheet">
     <!-- Script para cambiar la validación por defecto -->
-    <script src="d/validacion_main.js"></script>
+    <script src="js/validacion_main.js"></script>
     <!-- Script para manejar la adicion de una seccion Avistamiento -->
-    <script src="d/agregar_seccion.js"></script>
+    <script src="js/agregar_seccion.js"></script>
     <!-- Script para manejar la adicion de campos de imagen -->
-    <script src="d/agregar_fotos.js"></script>
+    <script src="js/agregar_fotos.js"></script>
     <!-- Script para manejar la interaccion entre falso submit y modal -->
-    <script src="d/modal_submit.js"></script>
+    <script src="js/modal_submit.js"></script>
     <!-- Script para mostrar regiones y comunas dinamicamente, ademas de verificarlas  -->
-    <script src="d/verificar_region_comuna.js"></script>
+    <script src="js/verificar_region_comuna.js"></script>
     <!-- Script para validar formato de fecha y hora  -->
-    <script src="d/verificar_fecha_hora.js"></script>
+    <script src="js/verificar_fecha_hora.js"></script>
     <!-- Script para validar formato de numero de celular  -->
-    <script src="d/verificar_celular.js"></script>
+    <script src="js/verificar_celular.js"></script>
     <!-- Script para validar formato de tipo y estado  -->
-    <script src="d/verificar_tipo_estado.js"></script>
+    <script src="js/verificar_tipo_estado.js"></script>
     <!-- Script para validar formato de correo  -->
-    <script src="d/verificar_email.js"></script>
+    <script src="js/verificar_email.js"></script>
     <!-- Script para validar formato de nombre y sector  -->
-    <script src="d/verificar_sector_nombre.js"></script>
+    <script src="js/verificar_sector_nombre.js"></script>
 
 
     <title>AvistApp - Informar avistamiento </title>
