Campos adicionales con name propio

--- a/Tarea 1/html/informar.html
+++ b/Tarea 1/html/informar.html
@@ -120,7 +120,7 @@
                         <div class="col">
                             <label>Día y hora</label>
                             <input class="form-control dia-hora-avistamiento" maxlength="16" minlength="16"
-                                   name="dia-hora-avistamiento" placeholder="AAAA/MM/DD HH:MM" required size="20"
+                                   name="dia-hora-avistamiento-1" placeholder="AAAA/MM/DD HH:MM" required size="20"
                                    type="text">
                             <div class="invalid-feedback">Por favor, ingrese una fecha y hora según el formato indicado
                                 (AAAA/MM/DD hora:minuto).
@@ -128,7 +128,7 @@
                         </div>
                         <div class="col">
                             <label>Tipo de animal</label>
-                            <select class="form-control tipo-avistamiento" name="tipo-avistamiento" required>
+                            <select class="form-control tipo-avistamiento" name="tipo-avistamiento-1" required>
                                 <option label="Selecione una opción..."></option>
                                 <option>Arácnido</option>
                                 <option>Insecto</option>
@@ -139,7 +139,7 @@
                         </div>
                         <div class="col">
                             <label>Estado</label>
-                            <select class="form-control estado-avistamiento" name="estado-avistamiento" required>
+                            <select class="form-control estado-avistamiento" name="estado-avistamiento-1" required>
                                 <option label="Selecione una opción..."></option>
                                 <option>Vivo</option>
                                 <option>Muerto</option>
@@ -152,7 +152,7 @@
                     <div class="form-row">
                         <div class="col">
                             <label>Foto del animal</label>
-                            <input class="form-control foto-avistamiento" name="foto-avistamiento" required type="file">
+                            <input class="form-control foto-avistamiento" name="foto-avistamiento-1-1" required type="file">
                             <p class="agregar-otra-foto" id="agregar-1"> Agregar otra foto </p>
                             <div class="invalid-feedback">Debe ingresar al menos una foto del animal. <br><br></div>
                         </div>
