Ejercicios y tareas hasta  antes de la T3

--- a/Tarea 1/html/avistamientos.html
+++ b/Tarea 1/html/avistamientos.html
@@ -19,18 +19,17 @@
 </head>
 <body>
     <header>
-        <div><a href="index.html"><img alt="Ladybug" id="logo" src="../images/ladybug.png"></a></div>
+        <div><a href="index.py"><img alt="Ladybug" id="logo" src="../images/ladybug.png"></a></div>
         <div id="title">AvistApp</div>
         <div id="bienvenida">¡Bienvenido al sistema de avistamientos más buena onda de Chile!</div>
-
         <div aria-label="Menu" class="btn-group shadow-lg" role="group">
-            <a class="btn btn-outline-danger custom-btn" data-mdb-color="dark" href="informar.html">
+            <a class="btn btn-outline-danger custom-btn" data-mdb-color="dark" href="informar.py">
                 Informar avistamiento
             </a>
-            <a class="btn btn-outline-danger custom-btn" data-mdb-color="dark" href="avistamientos.html">
+            <a class="btn btn-outline-danger custom-btn" data-mdb-color="dark" href="avistamientos.py">
                 Ver listado de avistamientos
             </a>
-            <a class="btn btn-outline-danger custom-btn" data-mdb-color="dark" href="estadisticas.html">
+            <a class="btn btn-outline-danger custom-btn" data-mdb-color="dark" href="estadisticas.py">
                 Estadísticas
             </a>
         </div>
